add mock pgo_api

--- a/pokemon_crawler/Dockerfile
+++ b/pokemon_crawler/Dockerfile
@@ -1,10 +1,8 @@
 FROM ubuntu:14.04
-MAINTAINER Di Chen <xxx@gmail.com>
+MAINTAINER Xingyao Huang <xxx@gmail.com>
 
 # Level 1
-RUN apt-get update -y && apt-get install -y libpq-dev \
-                                            python-dev \
-                                            ssh
+RUN apt-get update -y && apt-get install -y libpq-dev python-dev ssh
 
 RUN apt-get install -y python-setuptools
 
