--- a/pokemon_crawler/requirements.txt
+++ b/pokemon_crawler/requirements.txt
@@ -14,6 +14,7 @@ psycopg2==2.6.2
 pycryptodomex==3.4.2
 python-dateutil==2.5.3
 requests==2.11.1
+redis==2.10.5
 s2sphere==0.2.4
 s3transfer==0.1.7
 six==1.10.0
